ASPNetMicroserviceTemplate/k8s/services/service01-srv.yaml
# ClusterIP для сервиса
# - сервис доступен только внутри кластера
apiVersion: v1
kind: Service
metadata:
  name: service01-cip
  namespace: default
spec:
  selector:
    app: service01
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  type: ClusterIP
