ASPNetMicroserviceTemplate/k8s/services/services-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  namespace: default
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: repack.pw
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service01-cip
                port:
                  number: 8081
          - path: /example
            pathType: Prefix
            backend:
              service:
                name: robohash-cip
                port:
                  number: 80
  tls:
    - hosts:
        - repack.pw
      secretName: ingress-tls
